{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 53,
  "lineage": "9066df14-a442-16b7-b2e4-ba9233193f54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "omentejovem_ec2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0efcece6bed30fd98",
            "arn": "arn:aws:ec2:us-west-2:732075124266:instance/i-0319393363e7a8b2b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0319393363e7a8b2b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "omentejovem-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b505cc50bfd4304",
            "private_dns": "ip-172-33-0-165.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.33.0.165",
            "public_ip": "35.90.69.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f3a8aca95991fa1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0517ffb6106ce3b35",
              "sg-0e0f0901d4b50469a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfd1c34bd69a717e",
            "tags": {
              "Name": "omentejovem-wordpress-instance"
            },
            "tags_all": {
              "Name": "omentejovem-wordpress-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0517ffb6106ce3b35",
              "sg-0e0f0901d4b50469a"
            ]
          },
          "dependencies": [
            "aws_key_pair.omentejovem_ec2",
            "aws_security_group.ec2_sg",
            "aws_security_group.ec2_sg_all_inbound",
            "aws_subnet.public_subnet_a",
            "aws_vpc.omj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "omj",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:732075124266:internet-gateway/igw-0f005d8ae3781ea60",
            "id": "igw-0f005d8ae3781ea60",
            "owner_id": "732075124266",
            "tags": {
              "Name": "omentejovem-igw"
            },
            "tags_all": {
              "Name": "omentejovem-igw"
            },
            "vpc_id": "vpc-0b4b9446a0fb31c6a"
          },
          "dependencies": [
            "aws_vpc.omj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:732075124266:route-table/rtb-04b3d47c0b991dd4a",
            "id": "rtb-04b3d47c0b991dd4a",
            "owner_id": "732075124266",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f005d8ae3781ea60",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4b9446a0fb31c6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.omj",
            "aws_vpc.omj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9451fa410a03cd7",
            "route_table_id": "rtb-04b3d47c0b991dd4a",
            "subnet_id": "subnet-0dfd1c34bd69a717e"
          },
          "dependencies": [
            "aws_internet_gateway.omj",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_a",
            "aws_vpc.omj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:732075124266:security-group/sg-0e0f0901d4b50469a",
            "description": "Allow SSH access to EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0f0901d4b50469a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-ssh-access",
            "name_prefix": "",
            "owner_id": "732075124266",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4b9446a0fb31c6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.omj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_all_inbound",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:732075124266:security-group/sg-0517ffb6106ce3b35",
            "description": "Allow all inbound traffic to EC2",
            "egress": [],
            "id": "sg-0517ffb6106ce3b35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-all-inbound",
            "name_prefix": "",
            "owner_id": "732075124266",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4b9446a0fb31c6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.omj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:732075124266:subnet/subnet-0dfd1c34bd69a717e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.33.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfd1c34bd69a717e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732075124266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b4b9446a0fb31c6a"
          },
          "dependencies": [
            "aws_vpc.omj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "omj",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:732075124266:vpc/vpc-0b4b9446a0fb31c6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.33.0.0/16",
            "default_network_acl_id": "acl-06e916cb1bc8c0965",
            "default_route_table_id": "rtb-041c6de020383be89",
            "default_security_group_id": "sg-0f26099930ced2ca2",
            "dhcp_options_id": "dopt-003102d5b78ab2106",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4b9446a0fb31c6a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041c6de020383be89",
            "owner_id": "732075124266",
            "tags": {
              "Name": "omentejovem-network"
            },
            "tags_all": {
              "Name": "omentejovem-network"
            }
          }
        }
      ]
    }
  ]
}